--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ body {
 	padding: 0;
 	margin: 0; 
 }
+ul{
+	list-style: none;
+}
 .BurnIt{
 
 	display: block;
@@ -21,4 +24,128 @@ body {
 }
 .BurnItIcon{
 	width: 3em;
+}
+.parallax {
+    /*background-image: url('img_parallax.jpg');*/
+    /*background: linear-gradient(#fdbb2d, #b21f1f, #1a2a6c);*/
+    background: linear-gradient(#cb2d3e, #ef473a);
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+
+}
+.parallax>div{
+	position: absolute;
+	bottom: 50%;
+	right: 50%;
+	transform: translateX(50%) translateY(50%);
+	text-align: center;
+	color: #bfbfbf;
+}
+.bg-img-txt{
+	/*color: rgba(255, 255, 255, 0.1) !important;*/
+	color: #fdbb2d !important;
+	/*background: url('../resources/bgText.jpg');*/
+	/*background: linear-gradient(#fdbb2d 45%, #b21f1f, #1a2a6c);*/
+	background-repeat: repeat-x;
+	-webkit-background-clip: text;
+	animation: txt-animate 15s linear infinite;
+}
+@keyframes txt-animate{
+	0%{
+		background-position: left 0px top 10px;
+	}
+	100%{
+		background-position: left 800px top 10px;
+
+	}
+}
+.crystal-grid{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%);
+	height: 400px;
+}
+.crystal-grid ul{
+	width: 600px;
+	height: 300px;
+	margin: 0;
+	padding: 0;
+}
+.crystal-grid ul li{
+	list-style: none;
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	background: #000;
+	transform: rotate(45deg);
+	transition: 0.5s;
+	margin-left: -100px;
+	margin-right: -100px;
+	overflow: hidden;
+}
+
+.crystal-grid ul li.item1{
+	top:0%;
+	left: 0;
+}
+.crystal-grid ul li.item2{
+	top:38%;
+	left: 25%;
+}
+.crystal-grid ul li.item3{
+	top:0%;
+	left: 50%;
+}
+.crystal-grid ul li.item4{
+	top:38%;
+	left: 75%;
+}
+.crystal-grid ul li.item5{
+	top:0%;
+	left: 100%;
+}
+.crystal-grid ul li.item6{
+	top:0;
+	left: 25%;
+}
+.crystal-grid ul li .bg{
+	width: 100%;
+	height: 100%;
+	transform: rotate(-45deg) scale(1.4);
+
+}
+.crystal-grid ul li.item1 .bg{
+	background: url('../resources/prueba1.jpg');
+	background-size: cover;
+	background-position: center;
+	/*background-attachment: scroll;*/
+}
+.crystal-grid ul li.item2 .bg{
+	background: url('../resources/prueba2.jpg');
+	background-size: cover;
+	background-position: center;
+	/*background-attachment: scroll;*/
+}
+.crystal-grid ul li.item3 .bg{
+	background: url('../resources/prueba3.png');
+	background-size: cover;
+	background-position: center;
+	/*background-attachment: scroll;*/
+}
+.crystal-grid ul li.item4 .bg{
+	background: url('../resources/prueba4.png');
+	background-size: cover;
+	background-position: center;
+	/*background-attachment: scroll;*/
+}
+.crystal-grid ul li.item5 .bg{
+	background: url('../resources/prueba1.jpg');
+	background-size: cover;
+	background-position: center;
+	/*background-attachment: scroll;*/
 }
