--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,7 @@ ul{
   	top: 170px;
   	left: 55%;
   }
+  .
   .bi-lnd{
   	position: absolute;
   	top: 130px;
@@ -241,7 +242,7 @@ ul{
   	background-repeat: repeat-x;
   	animation: fireAnim 2s linear infinite;
   	text-shadow:  0 0 20px #ff9900;
-
+  	word-wrap: break-word;
   }
   @keyframes fireAnim{
   	0%{
@@ -251,9 +252,19 @@ ul{
   		background-position: left 500px top 0px;
   	}
   }
+ 
+@media screen and (max-width: 900px){
+	.up-lnd, .bi-lnd{
+		height: 100vh;
+
+	}
+	up-lnd img{
+  	width: 90%!important;
+  }
+}
 @media screen and (max-width: 600px){
 	.up-lnd, .bi-lnd{
-		height: 300px;
+		height: 60vh;
 	}
 }
 /*  .up-lnd h1{
