--- a/css/CrearCritica.css
+++ b/css/CrearCritica.css
@@ -19,8 +19,25 @@ body{
 	color:white;
 	text-align: center;
 }
-.cuerpo-cr{
+.Title-cr h1{
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%,50%);
+	background: none;
+	font-size: 75px;
+	color:white;
+	text-align: center;
+
+}
+.cuerpo-cr, .cuerpo-crt{
 	margin-top: 60px;
+}
+.cuerpo-crt{
+	color: white;
+}
+.panel1, .panel2, .panel3{
+	margin-top: 55px;
 }
 .panel1txt{
 	background: rgba(1,1,1,0.4);
@@ -32,8 +49,10 @@ body{
 }
 
 .img-panel img{
-	width: 100%;
-	max-height: 100%;
+	min-width: 200px;
+	max-width: 100%;
+	min-height: 50%;
+	max-height: 450px;
 	text-align: center;
 	align-items: center;
 }
@@ -66,4 +85,9 @@ body{
 	bottom: 5%;
 	right: 5%;
 	z-index: 50;
+}
+
+.center-img-file
+{
+	text-align: center;
 }
